--- a/index.html
+++ b/index.html
@@ -98,7 +98,8 @@
             <div class="about-info">
                 <p class="about-para">
 
-                    Hi! I am Naseela Pervez. I graduated from MS CS(data science) program at University of Southern California (USC) in Fall 2023. I am super excited to announce that I am starting my role as a research assistant at the The Management of INnovation, Entrepreneurial Research, and Venture Analysis (MINERVA) lab in February 2024. During my time at MINERVA, I will be working on an array of Natural Language Processing tasks. My primary research focus will be to extract important information from research articles in economics and entrepreneurial domain. Working as a research assistant at MINERVA, I aim to apply my machine learning and NLP skills to an array of research problems while also formalizing my research statement for my PhD.
+                    Hi! I am Naseela Pervez. I graduated from MS CS(data science) program at University of Southern California (USC) in Fall 2023. I am super excited to announce that I am starting my role as a research assistant at the The Management of INnovation, Entrepreneurial Research, and Venture Analysis (MINERVA) lab in February 2024. During my time at MINERVA, I will be working on an array of Natural Language Processing tasks. My primary research focus will be to extract important information from research articles in economics and entrepreneurial domain. Working as a research assistant at MINERVA, I aim to apply my machine learning and NLP skills to an array of research problems. 
+                    <!-- while also formalizing my research statement for my PhD. -->
 
                     
 
@@ -193,7 +194,7 @@
 
                 </div>
 
-                <div class="statement-para">
+                <!-- <div class="statement-para">
                     My PhD will allow me to apply my skills to elucidate language-personality connections,
                      mitigate implicit biases in large language models, and explain NLP model decisions. 
                      I want to ensure AI promotes equity by auditing for harmful biases and stereotypes.
@@ -201,7 +202,7 @@
                       psychology and behavior and how it is reflected in the biases in other aspects of 
                       their life. A PhD will equip me with the advanced technical abilities to conduct 
                       this impactful research. 
-                </div>
+                </div> -->
             </div>
         </div>
     </div>
