--- a/index.html
+++ b/index.html
@@ -98,7 +98,9 @@
             <div class="about-info">
                 <p class="about-para">
 
-                    Hi! I am Naseela Pervez. I graduated from MS CS(data science) program at University of Southern California (USC) in Fall 2023. I am super excited to announce that I am starting my role as a research assistant at the The Management of INnovation, Entrepreneurial Research, and Venture Analysis (MINERVA) lab in February 2024. During my time at MINERVA, I will be working on an array of Natural Language Processing tasks. My primary research focus will be to extract important information from research articles in economics and entrepreneurial domain. Working as a research assistant at MINERVA, I aim to apply my machine learning and NLP skills to an array of research problems. 
+                    Hi! I am Naseela Pervez. I graduated from MS CS(data science) program at University of Southern California (USC) in Fall 2023. 
+                    I am currently working as a research assistant at the The Management of INnovation, Entrepreneurial Research, and Venture Analysis (MINERVA) lab at USC. At MINERVA, I am working on an array of Natural Language Processing tasks. My primary research focus is extract important information from research articles in economics and entrepreneurial domain. Working as a research assistant at MINERVA, I aim to apply my machine learning and NLP skills to an array of research problems. 
+                    <!-- I am super excited to announce that I am starting my role as a research assistant at the The Management of INnovation, Entrepreneurial Research, and Venture Analysis (MINERVA) lab in February 2024. During my time at MINERVA, I will be working on an array of Natural Language Processing tasks. My primary research focus will be to extract important information from research articles in economics and entrepreneurial domain. Working as a research assistant at MINERVA, I aim to apply my machine learning and NLP skills to an array of research problems.  -->
                     <!-- while also formalizing my research statement for my PhD. -->
 
                     
