--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
             <div class="row">
                 <div class="left">
                     <div class="heading-1">Hi, I am <span class="name-span">Naseela</span></div>
-                    <div class="profession">Computer Science Graduate from USC (2024) | Understanding Theoritical Social Sciences and Human Psychology Using Natural Language Processing (NLP)</div>
+                    <div class="profession">Computer Science Graduate from USC (2024) | Natural Language Processing | Bias and Fairness | Network Science</div>
                 </div>
             </div>
     
