--- a/index.html
+++ b/index.html
@@ -223,7 +223,10 @@
                     I will be working on applying natural language processing and database management principles to manage <a href="https://sites.usc.edu/minerva/patentopia/">Patentopia</a> - a database
                     for all US patents. I will be working on information extraction from the patent text data. 
 
-                    Advisors: <a href="https://viterbi.usc.edu/directory/faculty/Belz/Andrea">Prof. Andrea Belz</a> ; <a href="https://www.isi.edu/~fredmors/">Prof. Fred Morstattter</a>
+                    <div>
+                        Advisors: <a href="https://viterbi.usc.edu/directory/faculty/Belz/Andrea">Prof. Andrea Belz</a> ; <a href="https://www.isi.edu/~fredmors/">Prof. Fred Morstattter</a>
+
+                    </div>
                 </div>
             </div>
             <div class="experience-i e-right">
@@ -237,7 +240,10 @@
                     I will be working on applying natural language processing and network science to analyze gender bias in patent-to-patent citation network.
                     In this work, I will focus on analyzing the network of male and female inventors and their citation interactions.
 
-                    Advisors: <a href="https://www.isi.edu/people-lerman/">Prof. Kristina Lerman</a> ; <a href="https://www.isi.edu/directory/jpujara/">Prof. Jay Pujara</a>.
+                    <div>
+                        Advisors: <a href="https://www.isi.edu/people-lerman/">Prof. Kristina Lerman</a> ; <a href="https://www.isi.edu/directory/jpujara/">Prof. Jay Pujara</a>.
+
+                    </div>
                 </div>
             </div>
             <div class="experience-i e-left">
