--- a/index.html
+++ b/index.html
@@ -14,6 +14,8 @@
                 <div class="left">
                     <div class="heading-1">Hi, I am <span class="name-span">Naseela</span></div>
                     <div class="profession">Computer Science Graduate from USC (2024) | Natural Language Processing | Bias and Fairness | Network Science</div>
+                    <div class="affiliations">Rewriting the code (RTC) | Grace Hopper Celebration (GHC) | Society of Women Engineers (GHC)</div>
+
                 </div>
             </div>
     
@@ -109,7 +111,9 @@
 
                 <p class="about-para">
 
-                    Having a bachelor's degree in Information Technology and Master's degree in Computer Science, I am passionate about problem solving and research in the realm of social sciences. I am a very passionate, persistent and positive individual who loves to look at a problem from multiple perspectives. If I have to describe my journey in life so far, it would be "With every hardship comes ease and with every problem comes a definite solution". I love spending time in a community of developers, researchers and academic circles. I have attended various conferences who represent the underrepresented people in technology. I am proud to say that I am affiliated with Grace Hopper Conference (GHC) and Society of Women Engineers (SWE). Attending these conferences and hearing the powerful women and people from LGBTQ+ speak of their successful journeys instills a feeling of courage and pride. I will forever be contributing to these communities in whatever capacity I can.
+                    Having a bachelor's degree in Information Technology and Master's degree in Computer Science, I am passionate about problem solving and research in the realm of social sciences. I am a very passionate, persistent and positive individual who loves to look at a problem from multiple perspectives. If I have to describe my journey in life so far, it would be "With every hardship comes ease and with every problem comes a definite solution". I love spending time in a community of developers, researchers and academic circles. I have attended various conferences who represent the underrepresented people in technology. I am proud to say that I am affiliated with Grace Hopper Conference (GHC) and Society of Women Engineers (SWE). Attending these conferences and hearing the powerful women and people from LGBTQ+ speak of their successful journeys instills a feeling of courage and pride. I will forever be contributing to these communities in whatever capacity I can. 
+                    I am also a proud mewmber of Rewriting the Code (RTC). I have received immense support from RTC members and I have built connection with
+                    female leaders in technology that has left an everlasting impact on my life. 
 
                     
 
